--- a/info.yaml
+++ b/info.yaml
@@ -15,11 +15,11 @@ project:
 # This info will be automatically collected and used to make a datasheet for the chip.
 documentation: 
   author:       "Jens Schleusner"      # Your name
-  discord:      ""      # Your discord handle
+  discord:      "Jens S"      # Your discord handle
   title:        "Trafficlight"      # Project title
   description:  "A state machine to control german traffic lights at an intersection."      # Short description of what your project does
   how_it_works: "A state machine generates signals for vehicle and pedestrian traffic lights at an intersection."      # Longer description of how the project works
-  how_to_test:  "Provide a clock. Generate a reset signal to set the intersection to all-red."      # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
+  how_to_test:  "Provide a clock. Generate a reset signal to reset the intersection to all-red."      # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
   external_hw:  "inverter for pedestrian red signals + LEDs for the signals"      # Describe any external hardware needed
   language:     "wokwi" # other examples include Verilog, Amaranth, VHDL, etc
   doc_link:     ""      # URL to longer form documentation, eg the README.md in your repository
