--- a/info.yaml
+++ b/info.yaml
@@ -18,9 +18,9 @@ documentation:
   discord:      "Jens S"      # Your discord handle
   title:        "Trafficlight"      # Project title
   description:  "A state machine to control german traffic lights at an intersection."      # Short description of what your project does
-  how_it_works: "A state machine generates signals for vehicle and pedestrian traffic lights at an intersection. Shows blinking yellow light for side street in reset state."      # Longer description of how the project works
-  how_to_test:  "Provide a clock. Generate a reset signal to reset the intersection to all-red."      # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
-  external_hw:  "Inverter for pedestrian red signals + LEDs for the signals"      # Describe any external hardware needed
+  how_it_works: "A state machine generates signals for vehicle and pedestrian traffic lights at an intersection of a main street and a side street. A blinking yellow light for the side street is generated in the reset state."      # Longer description of how the project works
+  how_to_test:  "Provide a clock, hook up LEDs and generate a reset signal to reset the intersection to all-red. If your leave the reset signal enabled, a blinking yellow light is shown for the side street."      # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
+  external_hw:  "An additional inverter is required to generate the pedestrian red signals from the green output. Hookup your own LEDs for the signals."      # Describe any external hardware needed
   language:     "wokwi" # other examples include Verilog, Amaranth, VHDL, etc
   doc_link:     ""      # URL to longer form documentation, eg the README.md in your repository
   clock_hz:     1       # Clock frequency in Hz (if required)
